@@ -1,9 +1,9 @@
 {
   "name": "LHCbDirac",
-  "version": "v9r2p12",
+  "version": "v9r2p13",
   "used_projects": {
     "project": [
-      [ "Dirac", "v6r20p25",
+      [ "Dirac", "v6r20p26",
         [ "bin", "python", "lib" ]
       ],
       [ "LHCbGrid", "v14r2",
